--- a/secciones/disclaimer.html
+++ b/secciones/disclaimer.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="constructora de casas modernas">
+    <meta name="keywords" content="casa, casas modernas, constructora, interior moderno">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <title>Disclaimer del TP</title>
     <link rel="shortcut icon" href="../imagenes/favcasa.png" type="image/x-icon">
     <link rel="stylesheet" href="../estilos/style.css">
@@ -12,9 +15,36 @@
 
 <body>
     <header>
-        <div class="titulo">
-            <a href="../index.html"><img src="../imagenes/logo1.png" alt="logo de contstructora"></a>
-        </div>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="../index.html"><i class="bi bi-house-fill fill=white"></i> Muñoz S.A.</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav ">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./distuhogar.html">Diseña tu hogar</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./empresa.html">Empresa</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./nuestrasobras.html">Nuestras obras</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./servicios.html">Servicios</a>
+                  </li>  
+                  <li class="nav-item">
+                    <a class="nav-link" href="./contacto.html">Contacto</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>      
     </header>
 
     <div class="capa"></div>
