--- a/secciones/nuestrasobras.html
+++ b/secciones/nuestrasobras.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="constructora de casas modernas">
+    <meta name="keywords" content="casa, casas modernas, constructora, interior moderno">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <title>Muñoz S.A.-Nuestras obras</title>
     <link rel="shortcut icon" href="../imagenes/favcasa.png" type="image/x-icon">
     <link rel="stylesheet" href="../estilos/style.css">
@@ -12,30 +15,36 @@
 
 <body>
     <header>
-        <div class="titulo">
-            <a href="../index.html"><img src="../imagenes/logo1.png" alt="logo de contstructora"></a>
-        </div>
-
-        <ul class="navegacion">
-            <li>
-                <a href="../index.html">Inicio</a>
-            </li>
-            <li>
-                <a href="./contacto.html">Contacto</a>
-            </li>
-            <li>
-                <a href="./distuhogar.html">Diseña tu hogar</a>
-            </li>
-            <li>
-                <a href="./nuestrasobras.html">Nuestras obras</a>
-            </li>
-            <li>
-                <a href="./empresa.html">Empresa</a>
-            </li>
-            <li>
-                <a href="./servicios.html">Servicios</a>
-            </li>
-        </ul>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="../index.html"><i class="bi bi-house-fill fill=white"></i> Muñoz S.A.</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav ">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./distuhogar.html">Diseña tu hogar</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./empresa.html">Empresa</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./nuestrasobras.html">Nuestras obras</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./servicios.html">Servicios</a>
+                  </li>  
+                  <li class="nav-item">
+                    <a class="nav-link" href="./contacto.html">Contacto</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>      
     </header>
 
     <div class="capa"></div>
@@ -51,16 +60,19 @@
     <section class="cuerpoObras">
 
         <!-- ARREGLAR resolucion DE LAS IMAGENES Y SU DESCRIPCIÓN (QUIZAS PONERLA A LA DERECHA, ASI ENTRA MAS FACILMENTE Y ES MAS CÓMODO)-->
-        <div id="carouselWithControls" class="carousel slide w-75 " data-bs-ride="carousel">
+        <div id="carouselWithControls" class="carousel slide w-75" data-bs-ride="carousel">
             <div class="carousel-inner">
-                <div class="carousel-item">
-                    <img src="../imagenes/casa3.jpg" class="d-block w-100" alt="Fachada de casa moderna">
-                </div>
-                <div class="carousel-item">
-                    <img src="../imagenes/casa4.jpg" class="d-block w-100" alt="Fachada de casa moderna">
-                </div>
                 <div class="carousel-item active">
-                    <img src="../imagenes/casa5.jpg" class="d-block w-100" alt="Fachada de casa moderna">
+                    <img src="../imagenes/casa8.jpg" class="d-block w-100" alt="Fachada de casa moderna">
+                </div>
+                <div class="carousel-item">
+                    <img src="../imagenes/casa7.jpg" class="d-block w-100" alt="Fachada de casa moderna">
+                </div>
+                <div class="carousel-item ">
+                    <img src="../imagenes/casa9.jpg" class="d-block w-100" alt="Fachada de casa moderna">
+                </div>
+                <div class="carousel-item ">
+                    <img src="../imagenes/casa10.jpg" class="d-block w-100" alt="Fachada de casa moderna">
                 </div>
             </div>
                 <a class="carousel-control-prev" href="#carouselWithControls" role="button" data-bs-slide="prev">
@@ -72,13 +84,43 @@
                   <span class="visually-hidden">Next</span>
                 </a>
         </div>
-        <!-- AGREGAR MUCHAS IMAGENES-->
+        
+        <div class="card descripcion">
+            <div class="card-header">
+              Algunos ejemplos
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Nuestros diseños</h5>
+              <p class="card-text">Estas son algunas de nuestras obras realizadas entre 2018 y 2020.
+                   Para obtener más información, realice una consulta y le brindaremos todos los detalles.</p>
+            </div>
+            <div class="card-footer text-muted">
+              Realizadas en Contry club (Buenos Aires)
+            </div>
+          </div>
     </section>
     
     <footer>
-        <div>
-            <a href="./disclaimer.html">Disclaimer</a>
-        </div>
+        <ul class="nav navbar-expand-lg navbar-dark bg-dark justify-content-center">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="./disclaimer.html">Disclaimer</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link"href="https://www.instagram.com/"><i class="bi bi-instagram fill=white"></i></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://www.facebook.com/"><i class="bi bi-facebook fill=white"></i></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="https://www.whatsapp.com/"><i class="bi bi-whatsapp fill=white"></i></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="https://www.linkedin.com/"><i class="bi bi-linkedin fill=white"></i></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="https://www.twitter.com/"><i class="bi bi-twitter fill=white"></i></a>
+            </li>
+          </ul>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
